--- a/explore.html
+++ b/explore.html
@@ -334,11 +334,10 @@
         <!-- PRODUCT SELECTION: END -->
 
     <!-- CHOOSE COUNTRY MODAL: START -->
-    <div class="modal fade" id="defaultModal" tabindex="-1" aria-labelledby="defaultModalLabel" aria-hidden="true">
+    <div class="modal fade" id="defaultModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="defaultModalLabel"></h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body"></div>
@@ -362,15 +361,15 @@
                     <!-- Company Description -->
                     <p>Singapore's #1 Customisable High Performance PC Builders.</p>
                     <!-- Company Awards -->
-                    <img class="me-4" height="80px" width="80px" src="assets/img/index/best-badge.png" alt="Best Badge Icon">
-                    <img height="80px" width="80px" src="assets/img/index/certified-badge.png" alt="Certified Browser Icon">
+                    <img class="me-4" height="80" width="80" src="assets/img/index/best-badge.png" alt="Best Badge Icon">
+                    <img height="80" width="80" src="assets/img/index/certified-badge.png" alt="Certified Browser Icon">
                     <!-- Choose Country Button -->
-                    <div class="mb-3" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;" type="button" data-bs-toggle="modal" data-bs-target=".bd-example-modal-xl">
-                        <img src="assets/img/index/location.png" width="20px" height="20px" style="filter: invert(100%);">
+                    <div class="mb-3" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;" role="button" data-bs-toggle="modal" data-bs-target=".bd-example-modal-xl">
+                        <img src="assets/img/index/location.png" width="20" height="20" style="filter: invert(100%)" alt="Location Icon">
                         <p id="current-country" class="ps-1 text-white my-auto"></p>
                     </div>
                     <!-- Choose Country Modal -->
-                    <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                    <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-hidden="true">
                         <div class="modal-dialog modal-xl">
                             <div class="modal-content px-5">
                                 <!-- Header -->
@@ -383,22 +382,22 @@
                                         <div class="row mb-0 mb-lg-3">
                                             <!-- Australia -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Australia</p>
                                             </div>
                                             <!-- China -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">China</p>
                                             </div>
                                             <!-- Hong Kong -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Hong Kong</p>
                                             </div>
                                             <!-- India -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">India</p>
                                             </div>
                                         </div>
@@ -406,22 +405,22 @@
                                         <div class="row mb-0 mb-lg-3">
                                             <!-- Indonesia -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Indonesia</p>
                                             </div>
                                             <!-- Japan -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Japan</p>
                                             </div>
                                             <!-- Malaysia -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Malaysia</p>
                                             </div>
                                             <!-- New Zealand -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">New Zealand</p>
                                             </div>
                                         </div>
@@ -429,22 +428,22 @@
                                         <div class="row">
                                             <!-- Philippines -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Philippines</p>
                                             </div>
                                             <!-- Korea -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Korea</p>
                                             </div>
                                             <!-- Singapore -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Singapore</p>
                                             </div>
                                             <!-- Taiwan -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Taiwan</p>
                                             </div>
                                         </div>
@@ -458,22 +457,22 @@
                                         <div class="row mb-0 mb-lg-3">
                                             <!-- Austria -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Austria</p>
                                             </div>
                                             <!-- Belgium-->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Belgium</p>
                                             </div>
                                             <!-- Finland -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Finland</p>
                                             </div>
                                             <!-- France -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">France</p>
                                             </div>
                                         </div>
@@ -481,22 +480,22 @@
                                         <div class="row mb-0 mb-lg-3">
                                             <!-- Ireland -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Ireland</p>
                                             </div>
                                             <!-- Norway -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Norway</p>
                                             </div>
                                             <!-- Sweden -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Sweden</p>
                                             </div>
                                             <!-- United Kingdom -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">United Kingdown</p>
                                             </div>
                                         </div>
@@ -520,7 +519,7 @@
                     <h5 class="mb-4 text-uppercase">Contact Us</h5>
                     <!-- Address -->
                     <p>
-                        Blk 31, Ngee Ann Polytechnic 
+                        Blk 31, Ngee Ann Polytechnic
                         <br>
                         535 Clementi Rd, Singapore 599489
                     </p>
@@ -569,6 +568,7 @@
         <i class="fas fa-arrow-up"></i>
     </button>
     <!-- BACK TO TOP BUTTON: END -->
+
 
     <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
